[add] nn calback for cam

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">OpenCvProject</string>
+    <string name="takePicture">Сделать снимок</string>
 </resources>
